@@ -242,7 +242,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.8.4</version>
+				<version>1.8.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.objenesis</groupId>
